OHLCVデータの取得に対して修正

--- a/fetch_btc_ohlcv/requirements.txt
+++ b/fetch_btc_ohlcv/requirements.txt
@@ -1,7 +1,8 @@
-functions-framework
+# crypto-indicator-service-docker/requirements.txt
 google-cloud-bigquery
 ccxt
-ta
 pandas
+ta
+Flask
+gunicorn
 numpy
-datetime
